# log-nine

./: .dockerignore  .gitignore  Cargo.toml  README.md  SeedTeams.sql  compose.yaml  package-lock.json  package.json  tailwind.config.js
MidServer/: package-lock.json
MidServer/config/: default.ts
Server/: log-nine-backend.sln
Server/Tests/: GlobalUsings.cs  TasksControllerTests.cs  TeamsControllerTests.cs  Tests.csproj  VoidLogNineHub.cs
Server/Tests/Mocks/: BaseTestRepository.cs  MockJobTaskRepository.cs  MockTeamRepository.cs
Server/log-nine-backend/: AppContext.cs  DBSeeder.cs  Dockerfile  ILogNineHub.cs  LogNineHub.cs  Program.cs  compose.yaml  log-nine-backend.csproj  seed.sql
Webpage/: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
Webpage/src/: App.css  App.tsx  AppOld.tsx  Helpers.ts  config.ts  index.css  index.tsx
backend/log-nine-backend/: .gitignore
migrations/: 001_init.sql
src/: App.css  App.tsx  DraggableExample.tsx  Task.tsx  Trupp.tsx  context.rs  error.rs  index.tsx  main.rs  token.rs  token_manager.rs
src/components/: CreateTeamBackdrop.tsx  EditableText.tsx  Swimlane.tsx  TaskCard.tsx  TaskDetails.tsx  TaskDetailsBody.tsx  TaskDetailsHeader.tsx  TeamCard.tsx
src/model/: mod.rs  token.rs  user.rs
src/props/: BackdropProps.tsx
src/redux/: store.ts  store_old.ts
src/repositories/: board_repository.rs  mod.rs  task_repository.rs  user_repository.rs
src/routes/: Board.tsx  auth.rs  board.rs  mod.rs  task.rs
src/state/: store.ts  taskSlice.ts  teamSlice.ts
src/types/: Task.tsx
(+113 files in other folders)
